--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "homepage": "https://nikwolf75.github.io/mesto-project-ff",
   "scripts": {
     "build": "webpack --mode production",
     "dev": "webpack serve",
