--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "homepage": "https://nikwolf75.github.io/mesto-project-ff",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack serve",
+  "start": "cross-env NODE_ENV=development webpack serve",
+  "build": "cross-env NODE_ENV=production webpack",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
@@ -19,6 +19,7 @@
     "autoprefixer": "^10.4.21",
     "babel-loader": "^10.0.0",
     "clean-webpack-plugin": "^4.0.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^7.1.2",
     "css-minimizer-webpack-plugin": "^7.0.2",
     "cssnano": "^7.0.6",
